// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <ContactUs /> component unchanged 1`] = `
<div>
  <div
    class="sticky bottom-0 flex justify-center h-full"
  >
    <a
      class="underline flex items-center"
      href="https://twitter.com/Inexplicable_G"
      rel="noopener"
      target="blank"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2732%27%20height=%2732%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Twitter logo"
          data-nimg="intrinsic"
          data-testid="twitter-logo"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
      <div
        class="text-lg ml-2"
      >
        @Inexplicable_G
      </div>
    </a>
  </div>
</div>
`;

exports[`renders <FeatureSection /> component unchanged 1`] = `
<div>
  <div
    class="flex-wrap flex m-10 justify-center"
  >
    <div
      class="flex flex-col text-center max-w-2xl my-auto"
    >
      <h2
        class="text-2xl"
      >
        Test Title
      </h2>
      <p
        class="m-5"
      >
        Test Text
      </p>
    </div>
    <div
      class="flex flex-col my-auto cursor-pointer shadow-md shadow-undefined"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27480%27%20height=%27270%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Test Title image"
          data-nimg="intrinsic"
          data-testid="feature-section-test-title-image"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
      <div
        class="flex flex-row mx-auto mt-2"
      >
        <div
          class="mx-1"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Zoom icon"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <small>
          Zoom
        </small>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders <FeatureSection /> reversed component unchanged 1`] = `
<div>
  <div
    class="flex-wrap-reverse flex m-10 justify-center"
  >
    <div
      class="flex flex-col my-auto cursor-pointer shadow-md shadow-undefined"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27480%27%20height=%27270%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Test Title image"
          data-nimg="intrinsic"
          data-testid="feature-section-test-title-image"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
      <div
        class="flex flex-row mx-auto mt-2"
      >
        <div
          class="mx-1"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Zoom icon"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <small>
          Zoom
        </small>
      </div>
    </div>
    <div
      class="flex flex-col text-center max-w-2xl my-auto"
    >
      <h2
        class="text-2xl"
      >
        Test Title
      </h2>
      <p
        class="m-5"
      >
        Test Text
      </p>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders <Footer /> component unchanged 1`] = `
<div>
  <footer
    class="mt-auto w-full flex justify-center h-11 bg-black text-white"
    data-testid="footer"
  >
    <a
      class="underline flex items-center"
      href="https://twitter.com/Inexplicable_G"
      rel="noopener"
      target="blank"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2732%27%20height=%2732%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Twitter logo"
          data-nimg="intrinsic"
          data-testid="twitter-logo"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
      <div
        class="text-lg ml-2"
      >
        @Inexplicable_G
      </div>
    </a>
  </footer>
</div>
`;

exports[`renders <GameCard /> component unchanged 1`] = `
<div>
  <div
    class="flex flex-col m-10"
  >
    <a
      aria-label="Find out more about This Merchant Life"
      class="w-72 h-72 bg-cover flex flex-col-reverse bg-[url('/tmlCard.png')]"
      href="/this-merchant-life"
    >
      <div
        class="shadow-tmlGreen shadow-lg flex items-center justify-center text-base h-6 bg-white text-black border border-black"
      >
        <div
          class="underline"
        >
          Find out more
        </div>
      </div>
    </a>
    <a
      aria-label="This Merchant Life on Steam"
      class="mx-auto shadow-lg flex self-center items-center justify-center w-[288px] h-12 shadow-tmlGreen text-base my-5 border border-black"
      href="https://store.steampowered.com/app/666730"
      rel="noopener"
      target="blank"
    >
      <div
        class="underline"
      >
        This Merchant Life
         on Steam
      </div>
    </a>
  </div>
</div>
`;

exports[`renders <GameCards /> component unchanged 1`] = `
<div>
  <div
    class="flex flex-row flex-wrap justify-center"
  >
    <div
      class="flex flex-col m-10"
    >
      <a
        aria-label="Find out more about Showrunner"
        class="w-72 h-72 bg-cover flex flex-col-reverse bg-[url('/showrunnerCard.png')]"
        href="/showrunner"
      >
        <div
          class="shadow-showrunnerRed shadow-lg flex items-center justify-center text-base h-6 bg-white text-black border border-black"
        >
          <div
            class="underline"
          >
            Find out more
          </div>
        </div>
      </a>
      <a
        aria-label="Showrunner on Steam"
        class="mx-auto shadow-lg flex self-center items-center justify-center w-[288px] h-12 shadow-showrunnerRed text-base my-5 border border-black"
        href="https://store.steampowered.com/app/2058200"
        rel="noopener"
        target="blank"
      >
        <div
          class="underline"
        >
          Showrunner
           on Steam
        </div>
      </a>
    </div>
    <div
      class="flex flex-col m-10"
    >
      <a
        aria-label="Find out more about This Merchant Life"
        class="w-72 h-72 bg-cover flex flex-col-reverse bg-[url('/tmlCard.png')]"
        href="/this-merchant-life"
      >
        <div
          class="shadow-tmlGreen shadow-lg flex items-center justify-center text-base h-6 bg-white text-black border border-black"
        >
          <div
            class="underline"
          >
            Find out more
          </div>
        </div>
      </a>
      <a
        aria-label="This Merchant Life on Steam"
        class="mx-auto shadow-lg flex self-center items-center justify-center w-[288px] h-12 shadow-tmlGreen text-base my-5 border border-black"
        href="https://store.steampowered.com/app/666730"
        rel="noopener"
        target="blank"
      >
        <div
          class="underline"
        >
          This Merchant Life
           on Steam
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders <GameDetails /> component unchanged 1`] = `
<div>
  <div>
    <div
      class="text-2xl mb-5"
    >
      Game Details
    </div>
    <div
      class="mb-20 border border-black"
    >
      <ul
        class="flex flex-wrap text-center place-items-center h-full border-b"
      >
        <li
          class="w-1/2 text-xl cursor-pointer h-full text-white bg-black"
        >
          <div>
            Showrunner
          </div>
        </li>
        <li
          class="w-1/2 text-xl cursor-pointer h-full text-black bg-white"
        >
          <div>
            This Merchant Life
          </div>
        </li>
      </ul>
      <div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Description
          </div>
          <div>
            Create and run your own TV show! An isometric management game where you craft scripts, populate your world with characters and cast actors to play them. Hire and manage staff, develop your studio and gain a dedicated following.
          </div>
        </div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Genre
          </div>
          <div>
            Simulation, Strategy, Management, Singleplayer
          </div>
        </div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Platforms
          </div>
          <div>
            PC - Steam
          </div>
        </div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Store
          </div>
          <div>
            <a
              href="https://store.steampowered.com/app/2058200"
              rel="noopener"
              target="blank"
            >
              <div
                class="inline-block align-middle underline"
              >
                Steam
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders <GameDetailsSection /> component unchanged 1`] = `
<div>
  <div
    class="py-6 mx-5"
  >
    <div
      class="text-lg mb-2"
    >
      Test
    </div>
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`renders <GameDetailsSection /> store link component unchanged 1`] = `
<div>
  <div
    class="py-6 mx-5"
  >
    <div
      class="text-lg mb-2"
    >
      Test
    </div>
    <div>
      <a
        href="https://store.steampowered.com/app/Test"
        rel="noopener"
        target="blank"
      >
        <div
          class="inline-block align-middle underline"
        >
          Steam
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders <GameScreenshot /> component unchanged 1`] = `
<div>
  <div
    class="m-5"
  >
    <div
      class="flex flex-col my-auto cursor-pointer"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27270%27%20height=%27270%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Test image"
          data-nimg="intrinsic"
          data-testid="game-screenshot-test-image"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
      <div
        class="flex flex-row mx-auto mt-2"
      >
        <div
          class="mx-1"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Zoom icon"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <small>
          Zoom
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders <PresskitSection /> component unchanged 1`] = `
<div>
  <div
    class="my-10"
  >
    <h2
      class="text-2xl my-5"
    >
      Test
    </h2>
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`renders <SharedHead /> component unchanged 1`] = `<div />`;

exports[`renders <SteamBanner /> component unchanged 1`] = `
<div>
  <a
    class="w-full h-12 bg-orange text-black flex self-center items-center justify-center"
    href="https://store.steampowered.com/app/undefined"
    rel="noopener"
    target="blank"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2732%27%20height=%2732%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="Steam logo"
        data-nimg="intrinsic"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
      <noscript />
    </span>
    <div
      class="underline ml-2"
    >
      See 
       on Steam
    </div>
  </a>
</div>
`;

exports[`renders <SteamWidget /> component unchanged 1`] = `
<div>
  <div
    class="mx-auto w-full"
  >
    <iframe
      class="mx-auto min-w-[500px] min-h-[200px]"
      src="https://store.steampowered.com/widget/undefined/?t=%20"
    />
  </div>
</div>
`;

exports[`renders <Video /> component unchanged 1`] = `
<div>
  <div
    class="max-w-2xl mt-10 mb-20 mx-auto shadow-lg shadow-undefined"
  >
    <h2
      class="text-2xl mb-5"
    >
      Trailer
    </h2>
    <div
      class="relative pb-[56.25%] h-0 overflow-hidden"
    >
      <iframe
        allow="encrypted-media"
        allowfullscreen=""
        class="absolute t-0 l-0 w-full h-full"
        frameborder="0"
        src="https://www.youtube-nocookie.com/embed/8UPMQbm8WkQ?modestbranding=1&rel=0"
        title="Test"
      />
    </div>
  </div>
</div>
`;
